# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "ui",
    hdrs = ["ui/menudef.h"],
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/game:__pkg__",
        "//code/ui:__pkg__",
    ],
)

filegroup(
    name = "ui_assets",
    srcs = [
        "ui/addfilter.menu",
        "ui/cinematicmenu.menu",
        "ui/connect.menu",
        "ui/controls.menu",
        "ui/createfavorite.menu",
        "ui/createserver.menu",
        "ui/credit.menu",
        "ui/default.menu",
        "ui/demo.menu",
        "ui/demo_quit.menu",
        "ui/endofgame.menu",
        "ui/error.menu",
        "ui/fight.menu",
        "ui/filter.menu",
        "ui/findplayer.menu",
        "ui/help.menu",
        "ui/hud.menu",
        "ui/hud.txt",
        "ui/hud2.txt",
        "ui/ingame.menu",
        "ui/ingame.txt",
        "ui/ingame_about.menu",
        "ui/ingame_addbot.menu",
        "ui/ingame_callvote.menu",
        "ui/ingame_controls.menu",
        "ui/ingame_join.menu",
        "ui/ingame_leave.menu",
        "ui/ingame_options.menu",
        "ui/ingame_orders.menu",
        "ui/ingame_player.menu",
        "ui/ingame_system.menu",
        "ui/ingame_vote.menu",
        "ui/joinserver.menu",
        "ui/main.menu",
        "ui/menudef.h",
        "ui/menus.txt",
        "ui/min_hud.menu",
        "ui/mod.menu",
        "ui/options.menu",
        "ui/ordershelp.menu",
        "ui/password.menu",
        "ui/player.menu",
        "ui/powerup.menu",
        "ui/quake3.menu",
        "ui/quit.menu",
        "ui/quitcredit.menu",
        "ui/resetscore.menu",
        "ui/score.menu",
        "ui/serverinfo.menu",
        "ui/setup.menu",
        "ui/skirmish.menu",
        "ui/system.menu",
        "ui/teamscore.menu",
        "ui/vid_restart.menu",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "material_assets",
    srcs = [
        "scripts/base_floor.shader",
        "scripts/base_wall2.shader",
        "scripts/common2.shader",
        "scripts/ctf2.shader",
        "scripts/flayer.shader",
        "scripts/gallery.shader",
        "scripts/gfx.shader",
        "scripts/gfx2.shader",
        "scripts/gothic_floor2.shader",
        "scripts/gothic_trim2.shader",
        "scripts/jim_test.shader",
        "scripts/jk_dm1.shader",
        "scripts/jk_tourney1.shader",
        "scripts/liquid.shader",
        "scripts/liquid2.shader",
        "scripts/models.shader",
        "scripts/models2.shader",
        "scripts/models3.shader",
        "scripts/multiplant.shader",
        "scripts/nateleaf.shader",
        "scripts/nateshad.shader",
        "scripts/outdoors.shader",
        "scripts/proto2.shader",
        "scripts/q3ta.shader",
        "scripts/sfx.shader",
        "scripts/sfx2.shader",
        "scripts/sky.shader",
        "scripts/sky2.shader",
        "scripts/stone2.shader",
        "scripts/team.shader",
        "scripts/terrain.shader",
        "scripts/tim.shader",
        "scripts/ui.shader",
        "scripts/ui_hud.shader",
        "scripts/ui_kc.shader",
        "scripts/web.shader",
        "scripts/work_tri1.shader",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "skin_assets",
    srcs = [
        "models/flag2/blue.skin",
        "models/flag2/red.skin",
        "models/flag2/white.skin",
        "models/players/fritzkrieg/head_default.skin",
        "models/players/fritzkrieg/lower_default.skin",
        "models/players/fritzkrieg/upper_default.skin",
        "models/players/heads/callisto/head_blue.skin",
        "models/players/heads/callisto/head_default.skin",
        "models/players/heads/callisto/head_red.skin",
        "models/players/heads/flayer/head_blue.skin",
        "models/players/heads/flayer/head_default.skin",
        "models/players/heads/flayer/head_red.skin",
        "models/players/heads/gammy/head_blue.skin",
        "models/players/heads/gammy/head_default.skin",
        "models/players/heads/gammy/head_red.skin",
        "models/players/heads/gaunt/head_blue.skin",
        "models/players/heads/gaunt/head_default.skin",
        "models/players/heads/gaunt/head_red.skin",
        "models/players/heads/james/head_blue.skin",
        "models/players/heads/james/head_default.skin",
        "models/players/heads/james/head_red.skin",
        "models/players/heads/janet/head_blue.skin",
        "models/players/heads/janet/head_default.skin",
        "models/players/heads/janet/head_red.skin",
        "models/players/heads/khan/head_blue.skin",
        "models/players/heads/khan/head_default.skin",
        "models/players/heads/khan/head_red.skin",
        "models/players/heads/megan/head_blue.skin",
        "models/players/heads/megan/head_default.skin",
        "models/players/heads/megan/head_red.skin",
        "models/players/heads/morgan/head_blue.skin",
        "models/players/heads/morgan/head_default.skin",
        "models/players/heads/morgan/head_red.skin",
        "models/players/heads/neptune/head_blue.skin",
        "models/players/heads/neptune/head_default.skin",
        "models/players/heads/neptune/head_red.skin",
        "models/players/heads/ursula/head_blue.skin",
        "models/players/heads/ursula/head_default.skin",
        "models/players/heads/ursula/head_red.skin",
        "models/players/james/crusaders/lower_blue.skin",
        "models/players/james/crusaders/lower_default.skin",
        "models/players/james/crusaders/lower_red.skin",
        "models/players/james/crusaders/upper_blue.skin",
        "models/players/james/crusaders/upper_default.skin",
        "models/players/james/crusaders/upper_red.skin",
        "models/players/james/intruders/lower_blue.skin",
        "models/players/james/intruders/lower_default.skin",
        "models/players/james/intruders/lower_red.skin",
        "models/players/james/intruders/upper_blue.skin",
        "models/players/james/intruders/upper_default.skin",
        "models/players/james/intruders/upper_red.skin",
        "models/players/james/lower_default.skin",
        "models/players/james/pagans/lower_blue.skin",
        "models/players/james/pagans/lower_default.skin",
        "models/players/james/pagans/lower_red.skin",
        "models/players/james/pagans/upper_blue.skin",
        "models/players/james/pagans/upper_default.skin",
        "models/players/james/pagans/upper_red.skin",
        "models/players/james/stroggs/lower_blue.skin",
        "models/players/james/stroggs/lower_default.skin",
        "models/players/james/stroggs/lower_red.skin",
        "models/players/james/stroggs/upper_blue.skin",
        "models/players/james/stroggs/upper_default.skin",
        "models/players/james/stroggs/upper_red.skin",
        "models/players/james/the fallen/lower_blue.skin",
        "models/players/james/the fallen/lower_default.skin",
        "models/players/james/the fallen/lower_red.skin",
        "models/players/james/the fallen/upper_blue.skin",
        "models/players/james/the fallen/upper_default.skin",
        "models/players/james/the fallen/upper_red.skin",
        "models/players/james/upper_default.skin",
        "models/players/janet/crusaders/lower_blue.skin",
        "models/players/janet/crusaders/lower_default.skin",
        "models/players/janet/crusaders/lower_red.skin",
        "models/players/janet/crusaders/upper_blue.skin",
        "models/players/janet/crusaders/upper_default.skin",
        "models/players/janet/crusaders/upper_red.skin",
        "models/players/janet/intruders/lower_blue.skin",
        "models/players/janet/intruders/lower_default.skin",
        "models/players/janet/intruders/lower_red.skin",
        "models/players/janet/intruders/upper_blue.skin",
        "models/players/janet/intruders/upper_default.skin",
        "models/players/janet/intruders/upper_red.skin",
        "models/players/janet/lower_default.skin",
        "models/players/janet/pagans/lower_blue.skin",
        "models/players/janet/pagans/lower_default.skin",
        "models/players/janet/pagans/lower_red.skin",
        "models/players/janet/pagans/upper_blue.skin",
        "models/players/janet/pagans/upper_default.skin",
        "models/players/janet/pagans/upper_red.skin",
        "models/players/janet/stroggs/lower_blue.skin",
        "models/players/janet/stroggs/lower_default.skin",
        "models/players/janet/stroggs/lower_red.skin",
        "models/players/janet/stroggs/upper_blue.skin",
        "models/players/janet/stroggs/upper_default.skin",
        "models/players/janet/stroggs/upper_red.skin",
        "models/players/janet/the fallen/lower_default.skin",
        "models/players/janet/the fallen/lower_red.skin",
        "models/players/janet/the fallen/upper_default.skin",
        "models/players/janet/the fallen/upper_red.skin",
        "models/players/janet/upper_default.skin",
        "models/players/pi/head_default.skin",
        "models/players/pi/lower_default.skin",
        "models/players/pi/upper_default.skin",
        "models/powerups/harvester/blue.skin",
        "models/powerups/harvester/red.skin",
    ],
    visibility = ["//visibility:public"],
)
